# -

./: README.md  TriCube_AutoInit.ipynb
.github/workflows/: qimen-import-check.yml  tricube-validation.yml
agents/: agent_workflow_v0.1.md
docs/: ai_7_layer_architecture_mapping_v0.1.md  mainline_status_v0.1.md  public_validation_sources_v0.1.md  static_dynamic_layer_definition_v0.1.md  task_handoff_core_requirement_v4_1_seed.md  task_handoff_prompt_v4_0_audit_hotfix_v0.1.md  validation_sample_strategy_v0.2.md
fourarts-core/: README.md
fourarts-core/00_manifest/: CURRENT_STATUS_2026-06-30.md  PHASE1_COMPLETION_2026-06-30.md  PHASE1_RESULT_2026-06-30.md  PHASE2_RESULT_2026-06-30.md  PHASE3_RESULT_2026-06-30.md
fourarts-core/03_verified_rules/: VERIFIED_RULE_Seed_schema_v0_1.md
fourarts-core/07_scripts_codex/: PHASE3_CODEX_TASK_PACKET_2026-06-30.md  tasklist_v0_1.md
fourarts-core/08_qimen_operation_import/: EXTERNAL_LICENSE_NOTICE.md  IMPORT_MANIFEST.json  README.md  qimen_calendar_snapshot_schema_v0.1.json  qimen_classical_source_map_v0.1.md  qimen_differential_case_set_v0.1.json  (+13 more)
samples/: dynamic_cases_seed_v0.1.csv  static_cases_seed_v0.1.csv
schemas/: dynamic_case.schema.json  static_case.schema.json
tricube_validation/: README.md  pyproject.toml
tricube_validation/config/: source_registry.json
tricube_validation/docs/: WORKFLOW.md
tricube_validation/schemas/: case.schema.json
tricube_validation/src/tricube_validation/: __init__.py  audit.py
tricube_validation/templates/: 5_5_REVIEW_PACKET.md
tricube_validation/tests/: test_audit.py
(+23 files in other folders)
